# tgr

./: .gitignore  Cargo.toml  debug.keystore  local.data
src/: audio.rs  color.rs  data.rs  draw.rs  engine.rs  info.rs  lib.rs  object.rs  prelude.rs  render.rs  widgets.rs
src/object/: d2.rs  mod.rs
src/render/: d2.rs  miniquad.rs  mod.rs  wgpu.rs
test/: test.rs
tgr_macro/: Cargo.toml
tgr_macro/src/: lib.rs
