[package]
name = "tgr"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Игровой движок на Rust"
repository = "https://github.com/Celebro228/tgr"
documentation = "https://docs.rs/tgr"
readme = "README.md"
keywords = ["game-engine", "rust", "3d", "graphics"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Argus"]

[dependencies]
# inventory = "0.3"
# tgr_macro = { path = "tgr_macro" }
miniquad = { version = "0.4.8" }
glam = "0.30.1"
image = "0.25.6"

[features]
# default = ["miniquad"]
# miniquad = ["dep:miniquad"]

[[bin]]
name = "test"
path = "test/test.rs"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = "s"
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true
