[package]
name = "tgr"
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Игровой движок на Rust"
repository = "https://github.com/Celebro228/tgr"
documentation = "https://docs.rs/tgr"
readme = "README.md"
keywords = ["game-engine", "rust", "3d", "graphics"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Argus"]

[dependencies]
# inventory = "0.3"
# tgr_macro = { path = "tgr_macro" }
miniquad = { version = "0.4.8" }
glam = "0.30.1"
image =  { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
rusttype = "0.9.3"
quad-snd = "0.2.8"

[features]
# default = ["miniquad"]
# miniquad = ["dep:miniquad"]

# [[bin]]
# name = "test"
# path = "test/test.rs"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true

[package.metadata.android.activity_attributes]
"android:exported" =  "true"
# "android:screenOrientation" = "userLandscape"

[package.metadata.android]
fullscreen = true
build_targets = [ "armv7-linux-androideabi" ]

# [apk.signing]
# key_path = "debug.keystore"
# key_alias = "androiddebugkey"
# key_password = "android"
# keystore_password = "android"
# 
# [package.metadata.android]
# android_version = 31
# target_sdk_version = 31
# min_sdk_version = 31
# build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
# package_name = "rust.celebro.test"
# label = "CapCut"
# version_code = 2
# version_name = "2.0"
# fullscreen = false
# opengles_version_major = 3
# opengles_version_minor = 2