[package]
name = "tgr"
version = "4.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Игровой движок на Rust"
repository = "https://github.com/Celebro228/tgr"
documentation = "https://docs.rs/tgr"
readme = "README.md"
keywords = ["game-engine", "rust", "3d", "graphics"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Argus"]

[[bin]]
name = "test"
path = "test/test.rs"

[dependencies]
# inventory = "0.3"
# tgr_macro = { path = "tgr_macro" }

miniquad = { version = "0.4.8", optional = true }
# wgpu = { version = "25.0.0", optional = true }
winit = { version = "0.30.10", features = ["android-native-activity"], optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.16", features = [ "derive" ], optional = true }

glam = "0.30.3"
image =  { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
rusttype = "0.9.3"
quad-snd = { version = "0.2.8", optional = true }
quad-storage = { version = "0.1.3", optional = true }

# [target.'cfg(not(feature = "wgpu"))'.dependencies]
# miniquad = { version = "0.4.8" }
# 
[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = ["dx12", "wgsl"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = ["vulkan", "wgsl"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = ["gles", "wgsl"], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = ["metal", "wgsl"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.0", default-features = false, features = ["webgpu", "wgsl"], optional = true }

[features]
default = ["widgets", "audio", "storage", "miniquad"]
audio = ["quad-snd"]
widgets = []
storage = ["quad-storage"]
miniquad = ["dep:miniquad"]
wgpu = ["dep:wgpu", "winit", "pollster", "bytemuck"]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true

[package.metadata.android.activity_attributes]
"android:exported" =  "true"
# "android:screenOrientation" = "userLandscape"

[package.metadata.android]
fullscreen = true
# build_targets = [ "armv7-linux-androideabi" ]